RESOLVED FIXED148425
Fix the !ENABLE(CSS_REGIONS) build after r188663
https://bugs.webkit.org/show_bug.cgi?id=148425
Summary Fix the !ENABLE(CSS_REGIONS) build after r188663
Csaba Osztrogonác
Reported 2015-08-25 03:08:53 PDT
http://trac.webkit.org/changeset/188663 broke the !ENABLE(CSS_REGIONS) build, because JSDOMNamedFlowCollection class is defined inside guard. ( http://trac.webkit.org/browser/trunk/Source/WebCore/dom/DOMNamedFlowCollection.idl#L1 ) build log: ../../Source/WebCore/bindings/js/JSDOMNamedFlowCollectionCustom.cpp:37:6: error: 'JSDOMNamedFlowCollection' has not been declared ../../Source/WebCore/bindings/js/JSDOMNamedFlowCollectionCustom.cpp: In function 'bool WebCore::nameGetter(JSC::ExecState*, JSC::PropertyName, JSC::JSValue&)': ../../Source/WebCore/bindings/js/JSDOMNamedFlowCollectionCustom.cpp:39:22: error: 'impl' was not declared in this scope ../../Source/WebCore/bindings/js/JSDOMNamedFlowCollectionCustom.cpp:43:37: error: 'globalObject' was not declared in this scope ninja: build stopped: subcommand failed. There is no need for JSDOMNamedFlowCollection::nameGetter() outside the guard, so let's guard the whole Source/WebCore/bindings/js/JSDOMNamedFlowCollectionCustom.cpp
Attachments
Patch (1.37 KB, patch)
2015-08-25 03:13 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-08-25 03:13:44 PDT
Chris Dumez
Comment 2 2015-08-25 08:59:29 PDT
Comment on attachment 259835 [details] Patch r=me, thanks!
WebKit Commit Bot
Comment 3 2015-08-25 11:04:25 PDT
Comment on attachment 259835 [details] Patch Clearing flags on attachment: 259835 Committed r188921: <http://trac.webkit.org/changeset/188921>
WebKit Commit Bot
Comment 4 2015-08-25 11:04:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.