Fix the !ENABLE(CSS_REGIONS) build after r188663 https://bugs.webkit.org/show_bug.cgi?id=148425

Reviewed by Chris Dumez.

* bindings/js/JSDOMNamedFlowCollectionCustom.cpp:


Canonical link: https://commits.webkit.org/166540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188921 268f45cc-cd09-0410-ab3c-d52691b4dbfc